<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".History">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="#028FFF"
                android:fontFamily="cursive"
                android:padding="10dp"
                android:text="@string/date_textview"
                android:textAlignment="center"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/intro_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:text="@string/intro_textview"
                android:textSize="18sp"
                android:textStyle="italic" />


            <ImageView
                android:id="@+id/diwali_imageview1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/diwali_celeb1" />

            <ImageView
                android:id="@+id/diwali_imageView2"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/diwali_celeb4" />


            <ImageView
                android:id="@+id/diwali_imageView4"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/diwali_celeb3" />

            <TextView
                android:id="@+id/place_of_celebration_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:background="#FB1605"
                android:padding="10dp"
                android:text="@string/place_of_celebration"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/detail_of_celebration_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:background="#03B60A"
                android:padding="10dp"
                android:text="@string/detail_of_celebration"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/history_of_celebration_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:text="@string/history_of_celebration"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>